--- a/hemsida.Html
+++ b/hemsida.Html
@@ -9,11 +9,11 @@
  
   <div class = "header">  
     <h1 class = "center-text"> 
-      is this thing on ?
+      is this thing on 
     </h1>
   </div>
 
-<div class="boxwrapper">
+<div class="boxwrapper"> 
 
    <div class="box">box 1</div>
    <div class="box">box 2</div>
